# chatgpt_cli

./: README.md  pyproject.toml
gpt_cli/: main.py
