[tool.poetry]
name = "gpt-cli"
version = "1.0.0"
description = "Unofficial command line interface for the use of ChatGPT"
authors = ["LufixSch"]
license = "GPL v3"
readme = "README.md"
packages = [{include = "gpt_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
chatgpt = 'gpt_cli.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'